# SYNTH

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
inc/: buffer.h  osc.h  output.h  synth.h
src/: buffer.c  main.c  osc.c  output.c  synth.c
unit_tests/: buffer_test.cpp  fff_globals.cpp  osc_test.cpp  output_test.cpp  synth_test.cpp
